# AutoQuantNX

./: README.md  app.py  pyproject.toml  requirements.txt
src/: app.py  gradio_app.py  model_handlers.py  onnx_conversion.py  quantize.py  utilities.py
src/app/: gradio_app.py
src/handlers/: __init__.py  base_handler.py  causal_lm_handler.py  embedding_model_handler.py  handler_documentation.MD  question_answering_handler.py  sequence_classification_handler.py  token_classification_handler.py  whisper_handler.py
src/handlers/audio_models/: whisper_handler.py
src/handlers/img_models/: image_classification_handler.py
src/handlers/nlp_models/: causal_lm_handler.py  embedding_model_handler.py  masked_lm_handler.py  multiple_choice_handler.py  question_answering_handler.py  seq2seq_lm_handler.py  sequence_classification_handler.py  token_classification_handler.py
src/optimizations/: onnx_conversion.py  quantize.py
src/utilities/: push_to_hub.py  resources.py  utilities.py
